		- added a new option to incomplete-list.sh.
		- fixed a bug in cleanup where syms with absolute paths was ignored.
		- fix: ignore allowed_types when scanning an sfv.
		- fix: remove sfvdata when encountering a 'bad' sfv.
		- added option to allow slashes in filenames listed in the sfv.
		- New option in zsconfig.h - allow_slash_in_sfv - allow slashes in sfv.

v1.0.5  --> 1.0.6  : (2195)
		- fixed a bug with lenient compare, which mostly affected mp3-releases.
		- fixed a bug re: testing files when sfv was uploaded after releasefile(s).
		- fixed a bug re: broken sfv files, that had files with no crc at the end.
		- fixed a bug re: deny_nfo_upload_in_zip.
		- fixed a bug re: wrong msg to client on certain cases in zipscript-c.
		- added support for lame 3.97 presets.
		- fixed a bug re: uploads to nocheck_dirs.
		- added dl_speedtest - a new binary to measure download speeds.
		- fixed a bug in rescan --quick which did not detect if a previously checked
		  file was missing.
		- added support for speedtesting.
		- New option in zsconfig.h - speedtest_dirs - dirs dedicated to speedtesting.
		- New option in zsconfig.h - speedtest_delfile - keep or delete uploaded file.
		- added special mp3 progressmeter.
		- New option in zsconfig.h - progressmeter_mp3 - how mp3 progressmeter looks
		  like.
		- New option in zsconfig.h - del_progressmeter_mp3 - how mp3 del_progressmeter
		  looks like.
		- added option to chdir() before rescan.
		- New option in zsconfig.h - rescan_chdir_flags - flags needed by the user to
		  chdir() before rescanning a dir. Note: root (uid 0) is always allowed.
		- added support for sfv_lenient.
		- New option in zsconfig.h - sfv_lenient - see certain delimeter chars as the same
		- added support for missing-sfv.
		- New option in zsconfig.h - create_missing_sfv_link - check for missing sfv.
		- New option in zsconfig.h - incomplete_base_sfv_indicator - missing-indicator.