@@ -18,6 +18,8 @@ v1.0.6  --> 1.0.X  :
 		- fix: remove sfvdata when encountering a 'bad' sfv.
 		- added option to allow slashes in filenames listed in the sfv.
 		- New option in zsconfig.h - allow_slash_in_sfv - allow slashes in sfv.
+		- added option to create sfv files on rescan.
+		- New option in zsconfig.h - create_missing_sfv - option to create sfv files.
 
 v1.0.5  --> 1.0.6  : (2195)
 		- fixed a bug with lenient compare, which mostly affected mp3-releases.
